--- a/portfolio.html
+++ b/portfolio.html
@@ -86,12 +86,19 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
-                <img
-                  src="./images/img9.jpg"
-                  width="360"
-                  height="300"
-                  alt="phone with payment app"
-                />
+                <figure class="casch-img-wrapper">
+                  <img
+                    src="./images/img9.jpg"
+                    width="360"
+                    height="300"
+                    alt="phone with payment app"
+                  />
+                  <figcaption class="figc-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </figcaption>
+                </figure>
                 <div class="project-second">
                   <h2 class="project-tittle">Cashless Payment</h2>
                   <p class="description">Marketing</p>
