portfolio-link wrapper

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
     </header>
     <main>
       <section class="portfolio-section">
-        <div class="container">
+        < class="container">
           <h1 class="visually-hidden">List</h1>
           <ul class="section-list list">
             <li class="section-list-item">
@@ -72,12 +72,19 @@
           <ul class="second-section-list list">
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
+                <div class="casch-img-wrapper">
                 <img
                   src="./images/img8.jpg"
                   width="360"
                   height="300"
                   alt="Banking app"
                 />
+                <p class="figc-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Banking App Interface Concept</h2>
                   <p class="description">App</p>
@@ -86,19 +93,19 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
-                <figure class="casch-img-wrapper">
+                <div class="casch-img-wrapper">
                   <img
                     src="./images/img9.jpg"
                     width="360"
                     height="300"
                     alt="phone with payment app"
                   />
-                  <figcaption class="figc-text">
+                  <p class="figc-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </figcaption>
-                </figure>
+                  </p>
+                </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Cashless Payment</h2>
                   <p class="description">Marketing</p>
@@ -107,12 +114,19 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
+                <div class="casch-img-wrapper">
                 <img
                   src="./images/img10.jpg"
                   width="360"
                   height="300"
                   alt="Laptop synhronisated with phone"
                 />
+                <p class="figc-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Meditation App</h2>
                   <p class="description">App</p>
@@ -121,12 +135,19 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
+                <div class="casch-img-wrapper">
                 <img
                   src="./images/img11.jpg"
                   width="360"
                   height="300"
                   alt="phone in the car"
                 />
+                <p class="figc-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Taxi Service</h2>
                   <p class="description">Marketing</p>
@@ -135,12 +156,19 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
+                <div class="casch-img-wrapper">
                 <img
                   src="./images/img12.jpg"
                   width="360"
                   height="300"
                   alt="screen with for different design"
                 />
+                <p class="figc-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Screen Illustrations</h2>
                   <p class="description">Design</p>
@@ -149,12 +177,19 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
+                <div class="casch-img-wrapper">
                 <img
                   src="./images/img13.jpg"
                   width="360"
                   height="300"
                   alt="women in orange sweater with phone in hand"
                 />
+                <p class="figc-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Online Courses</h2>
                   <p class="description">Marketing</p>
@@ -163,12 +198,19 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
+                <div class="casch-img-wrapper">
                 <img
                   src="./images/img14.jpg"
                   width="360"
                   height="300"
                   alt="instagram posts"
                 />
+                <p class="figc-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Instagram Stories Concept</h2>
                   <p class="description">Design</p>
@@ -177,12 +219,19 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
+                <div class="casch-img-wrapper">
                 <img
                   src="./images/img15.jpg"
                   width="360"
                   height="300"
                   alt="person with bag with vegetables"
                 />
+                <p class="figc-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Organic Food</h2>
                   <p class="description">Web Site</p>
@@ -191,12 +240,19 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
+                <div class="casch-img-wrapper">
                 <img
                   src="./images/img16.jpg"
                   width="360"
                   height="300"
                   alt="somebody is making cup of coffe"
                 />
+                <p class="figc-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Fresh Coffee</h2>
                   <p class="description">Web Site</p>
