--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
     </header>
     <main>
       <section class="portfolio-section">
-        < class="container">
+        <div class="container">
           <h1 class="visually-hidden">List</h1>
           <ul class="section-list list">
             <li class="section-list-item">
@@ -73,13 +73,13 @@
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
                 <div class="casch-img-wrapper">
-                <img
-                  src="./images/img8.jpg"
-                  width="360"
-                  height="300"
-                  alt="Banking app"
-                />
-                <p class="figc-text">
+                  <img
+                    src="./images/img8.jpg"
+                    width="360"
+                    height="300"
+                    alt="Banking app"
+                  />
+                  <p class="figc-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -115,13 +115,13 @@
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
                 <div class="casch-img-wrapper">
-                <img
-                  src="./images/img10.jpg"
-                  width="360"
-                  height="300"
-                  alt="Laptop synhronisated with phone"
-                />
-                <p class="figc-text">
+                  <img
+                    src="./images/img10.jpg"
+                    width="360"
+                    height="300"
+                    alt="Laptop synhronisated with phone"
+                  />
+                  <p class="figc-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -136,13 +136,13 @@
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
                 <div class="casch-img-wrapper">
-                <img
-                  src="./images/img11.jpg"
-                  width="360"
-                  height="300"
-                  alt="phone in the car"
-                />
-                <p class="figc-text">
+                  <img
+                    src="./images/img11.jpg"
+                    width="360"
+                    height="300"
+                    alt="phone in the car"
+                  />
+                  <p class="figc-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -157,13 +157,13 @@
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
                 <div class="casch-img-wrapper">
-                <img
-                  src="./images/img12.jpg"
-                  width="360"
-                  height="300"
-                  alt="screen with for different design"
-                />
-                <p class="figc-text">
+                  <img
+                    src="./images/img12.jpg"
+                    width="360"
+                    height="300"
+                    alt="screen with for different design"
+                  />
+                  <p class="figc-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -178,13 +178,13 @@
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
                 <div class="casch-img-wrapper">
-                <img
-                  src="./images/img13.jpg"
-                  width="360"
-                  height="300"
-                  alt="women in orange sweater with phone in hand"
-                />
-                <p class="figc-text">
+                  <img
+                    src="./images/img13.jpg"
+                    width="360"
+                    height="300"
+                    alt="women in orange sweater with phone in hand"
+                  />
+                  <p class="figc-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -199,13 +199,13 @@
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
                 <div class="casch-img-wrapper">
-                <img
-                  src="./images/img14.jpg"
-                  width="360"
-                  height="300"
-                  alt="instagram posts"
-                />
-                <p class="figc-text">
+                  <img
+                    src="./images/img14.jpg"
+                    width="360"
+                    height="300"
+                    alt="instagram posts"
+                  />
+                  <p class="figc-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -220,13 +220,13 @@
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
                 <div class="casch-img-wrapper">
-                <img
-                  src="./images/img15.jpg"
-                  width="360"
-                  height="300"
-                  alt="person with bag with vegetables"
-                />
-                <p class="figc-text">
+                  <img
+                    src="./images/img15.jpg"
+                    width="360"
+                    height="300"
+                    alt="person with bag with vegetables"
+                  />
+                  <p class="figc-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -241,13 +241,13 @@
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
                 <div class="casch-img-wrapper">
-                <img
-                  src="./images/img16.jpg"
-                  width="360"
-                  height="300"
-                  alt="somebody is making cup of coffe"
-                />
-                <p class="figc-text">
+                  <img
+                    src="./images/img16.jpg"
+                    width="360"
+                    height="300"
+                    alt="somebody is making cup of coffe"
+                  />
+                  <p class="figc-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
