--- a/index.html
+++ b/index.html
@@ -442,9 +442,14 @@
       </div>
     </footer>
 
-    <div class="backdrop-is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
 <div class="modal">
-  <button type="button" class="close-btn" data-modal-close>X</button>
+  <button type="button" class="close-btn" data-modal-close>
+    <svg class="x-icon" width="18" height="8">
+              <use href="./images/icon.svg#icon-close" >
+
+              </use></svg>
+  </button>
   <h2>I am modal window</h2>
 </div>
     </div>
