studio, portfolio underline

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             >Web<span class="logo-text">Studio</span></a
           >
           <ul class="navigation list">
-            <li><a class="nav-link link" href="./index.html">Studio</a></li>
+            <li><a class="nav-link link studio-underline" href="./index.html">Studio</a></li>
             <li>
               <a class="nav-link link" href="./portfolio.html">Portfolio</a>
             </li>
