--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,11 @@
           <ul class="navigation list">
             <li><a class="nav-link link" href="./index.html">Studio</a></li>
             <li>
-              <a class="nav-link link" href="./portfolio.html">Portfolio</a>
+              <a
+                class="nav-link link portfolio-underline"
+                href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li><a class="nav-link link" href="">Contacts</a></li>
           </ul>
