zmiana x-icon, portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -251,7 +251,7 @@
                     height="300"
                     alt="somebody is making cup of coffe"
                   />
-                  <p class="figc-text">
+                  <p class="figc-text" href="">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
