--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 <div class="modal">
   <button type="button" class="close-btn" data-modal-close>
     <svg class="x-icon" width="8" height="8">
-              <use href="./images/icon.svg#icon-close" >
+              <use href="./images/icon.svg#icon-close-black-18dp-2-13" >
 
               </use></svg>
   </button>
