--- a/portfolio.html
+++ b/portfolio.html
@@ -76,18 +76,18 @@
           <ul class="second-section-list list">
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
-                <div a href="" class="casch-img-wrapper">
-                    <img
-                      src="./images/img8.jpg"
-                      width="360"
-                      height="300"
-                      alt="Banking app"
+                <div class="casch-img-wrapper">
+                  <img
+                    src="./images/img8.jpg"
+                    width="360"
+                    height="300"
+                    alt="Banking app"
                   />
                   <p class="figc-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </p></a>
+                  </p>
                 </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Banking App Interface Concept</h2>
@@ -97,7 +97,7 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
-                <div a href="" class="casch-img-wrapper">
+                <div class="casch-img-wrapper">
                   <img
                     src="./images/img9.jpg"
                     width="360"
@@ -108,7 +108,7 @@
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </p></a>
+                  </p>
                 </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Cashless Payment</h2>
@@ -118,7 +118,7 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
-                <div a href="" class="casch-img-wrapper">
+                <div class="casch-img-wrapper">
                   <img
                     src="./images/img10.jpg"
                     width="360"
@@ -129,7 +129,7 @@
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </p></a>
+                  </p>
                 </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Meditation App</h2>
@@ -139,7 +139,7 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
-                <div a href="" class="casch-img-wrapper">
+                <div class="casch-img-wrapper">
                   <img
                     src="./images/img11.jpg"
                     width="360"
@@ -150,7 +150,7 @@
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </p></a>
+                  </p>
                 </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Taxi Service</h2>
@@ -159,8 +159,8 @@
               </a>
             </li>
             <li class="second-list-item">
-              <div a class="link portfolio-link" href="">
-                <di a href="" class="casch-img-wrapper">
+              <a class="link portfolio-link" href="">
+                <div class="casch-img-wrapper">
                   <img
                     src="./images/img12.jpg"
                     width="360"
@@ -171,7 +171,7 @@
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </p></a>
+                  </p>
                 </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Screen Illustrations</h2>
@@ -181,7 +181,7 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
-                <div a href="" class="casch-img-wrapper">
+                <div class="casch-img-wrapper">
                   <img
                     src="./images/img13.jpg"
                     width="360"
@@ -192,7 +192,7 @@
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </p></a>
+                  </p>
                 </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Online Courses</h2>
@@ -202,7 +202,7 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
-                <div a href="" class="casch-img-wrapper">
+                <div class="casch-img-wrapper">
                   <img
                     src="./images/img14.jpg"
                     width="360"
@@ -213,7 +213,7 @@
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </p></a>
+                  </p>
                 </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Instagram Stories Concept</h2>
@@ -223,7 +223,7 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
-                <div a href="" class="casch-img-wrapper">
+                <div class="casch-img-wrapper">
                   <img
                     src="./images/img15.jpg"
                     width="360"
@@ -234,7 +234,7 @@
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </p></a>
+                  </p>
                 </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Organic Food</h2>
@@ -244,7 +244,7 @@
             </li>
             <li class="second-list-item">
               <a class="link portfolio-link" href="">
-                <div a href="" class="casch-img-wrapper">
+                <div class="casch-img-wrapper">
                   <img
                     src="./images/img16.jpg"
                     width="360"
@@ -255,7 +255,7 @@
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </p></a>
+                  </p>
                 </div>
                 <div class="project-second">
                   <h2 class="project-tittle">Fresh Coffee</h2>
